--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,10 @@ jobs:
         run: forge install
 
       - name: Run coverage
-        run: forge coverage --report lcov --ir-minimum
-
-      - name: Filter coverage report
-        run: |
-          grep -v '/mocks/' ./lcov.info | grep -v '/interfaces/' > ./lcov.filtered.info
+        run: forge coverage --skip 'src/mocks/**' --skip 'src/script/**' --skip 'src/deploy/**' --ir-minimum --report lcov  > lcov.info
 
       - name: Upload filtered coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v5
         with:
-          files: ./lcov.filtered.info
+          files: ./lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
