--- a/dao-smartcontract/foundry.toml
+++ b/dao-smartcontract/foundry.toml
@@ -3,7 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+solc = "0.8.26"
+optimizer = true
+optimizer_runs = 1000000
+via_ir = true
+evm_version = "paris"
 
 [rpc_endpoints]
 armoy = "${AMOY_RPC_URL}"
