Updated Solidity versions

--- a/dao-smartcontract/foundry.toml
+++ b/dao-smartcontract/foundry.toml
@@ -3,11 +3,20 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-solc = "0.8.26"
+solc = "0.8.20"
 optimizer = true
 optimizer_runs = 1000000
 via_ir = true
 evm_version = "paris"
+
+# Additional optimizations to help with stack overflow
+[profile.default.fuzz]
+runs = 1000
+
+[profile.default.invariant]
+runs = 1000
+depth = 15
+fail_on_revert = false
 
 [rpc_endpoints]
 armoy = "${AMOY_RPC_URL}"
